fixed a gap issue down the right hand side of the page with html, body css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,12 @@ h2 {
     border: var(--highlight-color);
 }
 
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
+
 /* Buttons */
 
 .custom-button-filled {
